# orbit

./: .gitignore  Cargo.toml  README.md  new_claude_prompt.md  package.json  pnpm-lock.yaml  screen_extraction.md  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/agents/: orbit-tech-researcher.md
context/: agent_workflow_memory.md  digiq_rl.md  openpipe_art_research.md  orbit-agent.md  rl_agent.md  self_operating_computer.md  trycua.md
crates/orbit-ai/: .env.example  .env.vscode  Cargo.toml  README.md  TESTING.md  pyproject.toml  pyrightconfig.json  requirements.txt  start_nemo_server.sh  test_langchain.py
crates/orbit-ai/examples/: python_usage.py  simple_test.py  test_pyo3.py  websocket_streaming.rs
crates/orbit-ai/orbit-agent/: pyproject.toml
crates/orbit-ai/orbit-agent/src/: plugin.yml
crates/orbit-ai/orbit-agent/src/orbit_agent/: orbit_agent.py  tools.py
crates/orbit-ai/orbit-agent/src/orbit_ai/: plugin.yml
crates/orbit-ai/orbit-agent/src/orbit_ai/orbit_agent/: context.py
crates/orbit-ai/orbit-agent/src/tests/: __init__.py
crates/orbit-ai/python/orbit_ai/: __init__.py  __init__.pyi  ableton_tools.py  dummy_bot.py  langchain_bot.py  langgraph_agent.py  orbit_pro_agent.py  singleton_manager.py  system_prompt.py
crates/orbit-ai/python/orbit_ai/providers/: __init__.py
crates/orbit-ai/src/: bot_wrapper.rs  langchain.rs  langchain_test.rs  lib.rs  models.rs  nemo_agent.rs  nemo_agent_test.rs  ocr.rs  orbit_agent.rs  orbit_agent_test.rs  python.rs  screenshot.rs  service.rs  system_prompt.rs  tools.rs
crates/orbit-ai/src/python/: bot_wrapper.rs  langchain_py.rs  mod.rs  pyproject.toml
crates/orbit-ai/src/python/orbit_ai/: __init__.py  plugin.yml  singleton_manager.py
crates/orbit-ai/src/python/orbit_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crates/orbit-ai/src/python/orbit_ai/nemo_agent/: litellm_fix.py  local_memory.py  nemo_ableton_tools.py  orbit_config.yml
crates/orbit-ai/src/python/orbit_ai/orbit_agent/: __init__.py  context.py  orbit_agent.py  prompt.py  tools.py
crates/orbit-ai/src/python/tests/: test_ableton_integration.py  test_memory_integration.py  test_nemo_agent.py  test_nemo_functions.py  test_orbit_agent.py
crates/orbit-ai/tests/: __init__.py  test_ableton_connection.py  test_db_conversions.py  test_langgraph_agent.py  test_orbit_ai.py  test_osc_client.py  test_track_info.py
crates/orbit-app/: .gitignore  Cargo.toml  tauri.conf.json
crates/orbit-app/capabilities/: default.json
crates/orbit-app/icons/: icon.icns
crates/orbit-app/src/: commands.rs  commands_test.rs  lib.rs  main.rs  window.rs
crates/orbit-connector/: Cargo.toml
crates/orbit-connector/examples/: ableton_test.rs
crates/orbit-connector/scripts/: README.md  install.sh
crates/orbit-connector/scripts/OrbitRemote/: OSCServer.py  OrbitRemote.py  __init__.py
crates/orbit-connector/src/: lib.rs
crates/orbit-connector/src/ableton/: live_api.rs  mod.rs  osc_handler.rs
crates/orbit-connector/src/python/: ableton_client.py  test_ableton_client.py
crates/orbit-core/: Cargo.toml
crates/orbit-core/src/: lib.rs
scripts/: fix_orbitremote.sh  install_orbitremote.py  reload_ableton_script.applescript  setup_orbitremote_complete.py  test_osc.py
specs/: orbit_connector.md  screen_extraction.md
src/: App.css  App.scss  App.tsx  palette.scss  warm_space_palette.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_handle.rs  command.rs  commands.rs  constants.rs  consts.rs  lib.rs  main.rs  tray.rs  window.rs  window_manager.rs
src-tauri/src/services/: mod.rs  ocr.rs  screenshot.rs  screenshot_test.rs
src-tauri/src/services/chatbot/: langchain.rs  langchain_test.rs  mod.rs  models.rs  service.rs  system_prompt.rs  tools.rs
src/components/: AutoCompleteMenu.scss  AutoCompleteMenu.tsx  InputField.scss  InputField.tsx  LiquidOrbit.scss  LiquidOrbit.tsx  LoadingAnimation.scss  LoadingAnimation.tsx  OrbitLogo.scss  OrbitLogo.tsx  ProducerMode.scss  ProducerMode.tsx  ResponseDisplay.scss  ResponseDisplay.tsx  StandardMode.tsx  TrackSelector.scss  TrackSelector.tsx
src/hooks/: useStreamingQuery.test.ts  useStreamingQuery.ts  useTextareaResize.ts  useWindowEvents.ts  useWindowResize.ts
src/styles/: animations.scss  base.scss  layout.scss  mixins.scss
src/test/: setup.ts
