[package]
name = "orbit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
dotenv = "0.15.0"
tauri = { version = "2.7.0", features = [
    "macos-private-api",
    "devtools", "image-png", "image-ico", "tray-icon",
] }
tauri-plugin-window-state = { git = "https://github.com/Hacksore/plugins-workspace", branch = "v2" }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.27"
tauri-plugin-log = "2.2.0"
tauri-plugin-single-instance = { version = "2.0.0-rc.3" }
tauri-plugin-websocket = { version = "2.2.0" }
tauri-plugin-fs = "2.2.0"
tauri-plugin-process = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-http = "2.2.0"
anyhow = "1.0.86"
cocoa = "0.26.0"
objc = "0.2.7"
thiserror = "2.0.12"
langchain-rust = "4.6.0"
futures-util = "0.3.31"
secrecy = "0.10.3"
tokio = "1.46.1"
async-trait = "0.1"
xcap = "0.6.2"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }


[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
system-notification = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
cocoa = "0.26.0"
objc = "0.2.7"
objc2 = "0.5.0"
objc2-app-kit = "0.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
