[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "orbit-ai"
version = "0.1.0"
description = "Python bindings for Orbit AI with LangChain integration"
authors = [{name = "Orbit Team"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-auth>=2.41.1",
    "google-cloud-aiplatform>=1.121.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-litellm>=0.2.3",
    "langgraph>=1.0.0",
    "openai>=1.0.0",
    "pytesseract>=0.3.13",
    "pytest>=8.4.2",
]



[tool.maturin]
features = ["python"]
python-source = "orbit-agent"
module-name = "orbit_ai.orbit_ai"
