[package]
name = "orbit-connector" 
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
orbit-core = { path = "../orbit-core" }
clap = { workspace = true }
rosc = { workspace = true }
cpal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
