[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit_agent"
version = "0.1.0"
description = "Orbit Agent package for AI agent integration with Ableton Live"
authors = [{name = "Orbit", email = "ai@orbit.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-auth>=2.23.0",
    "langchain>=0.1.0",
    "langchain-google-vertexai>=0.0.5",
    "langgraph>=0.2.50",
    "langchain-openai>=0.1.0",
    "pytesseract",
    "pillow",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]



[tool.setuptools]
packages = ["orbit_agent"]

[tool.setuptools.package-dir]
orbit_agent = "src/orbit_agent"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that require external services",
    "asyncio: Async tests",
]
